-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.2.1
-
None
-
5708f3aa345092baa2678934b03ea181018a3d18
Steps to reproduce:
create a new qml type on top of TestCase
create two tst_*.qml documents with that type as root and add at least a test_ function for each document
Current result:
Tree in test pane does not show the names of the two test cases, all test functions are under the same root node
Note: not sure the limitation is only of the autotest plugin, even running the qmake .pro on command line seemed to give me a single context for both tst_ files, but that is probably a separate issue