src/plugins/autotest/unit_test/mixed_atp/tests/auto/auto.pro
@@ -9,7 +9,8 @@ SUBDIRS = \
 greaterThan(QT_MAJOR_VERSION, 4) {
     message("enabling quick tests")
     SUBDIRS += quickauto \
-    quickauto2
+    quickauto2 \
+    quickauto3
 } else {
     message("quick tests disabled")
 }
