src/plugins/autotest/unit_test/mixed_atp/tests/auto/auto.qbs
@@ -9,6 +9,7 @@ Project {
         "dummy/dummy.qbs",
         "gui/gui.qbs",
         "quickauto/quickauto.qbs",
-        "quickauto2/quickauto2.qbs"
+        "quickauto2/quickauto2.qbs",
+        "quickauto3/quickauto3.qbs"
     ]
 }
